--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,14 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
+nav:
+  - title: "Home"
+    url: /
+  - title: "About"
+    url: /about/
+  - title: "Contact Me"
+    url: /contact/
+
 defaults:
   # _pages
   - scope:
