--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
-header_nav:
+main:
   - title: "Home"
     url: /
   - title: "About"
@@ -60,6 +60,11 @@ defaults:
       comments: true
       share: true
       related: true
+
+header:
+  nav:
+    enabled: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
