--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,8 @@ header:
   nav:
     enabled: true
 
+include:
+  - _pages
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
