--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ header:
 
 include:
   - _pages
+  - _posts
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
