--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: post  # Change from "single" to "post"
       author_profile: true
       read_time: true
       comments: true
