--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ header:
 include:
   - _pages
   - _posts
+  - _assets
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
