--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-mathjax
 
 defaults:
   # _pages
