--- a/_config.yml
+++ b/_config.yml
@@ -1,48 +1,56 @@
+# --- Site ---
 title: The LinuxWire Blog
 email: furtechtime@gmail.com
 description: >-
-  I am a sleepy, queer, undergraduate mathematics student. I love algorithms, theoretical computer science, pure math, and any research at all that involves the three. I hope to share what I learn as a student as well as explore some intresting mathematical concepts in this blog. My love for all of this started when I first started using linux 5 years ago...
+  I am a sleepy, queer, undergraduate mathematics student. I love algorithms, theoretical computer science, pure math, and any research at all that involves the three. I hope to share what I learn as a student as well as explore some interesting mathematical concepts in this blog. My love for all of this started when I first started using Linux 5 years ago...
 url: "https://linuxwire.net"
 baseurl: ""
 github_username: linuxwire-blog
 timezone: America/New_York
-future: true        # <-- allows future-dated posts to publish
+future: true
 
+# --- Theme ---
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: "dark"
 
+# --- Plugins (GitHub Pages compatible) ---
 plugins:
   - jekyll-feed
   - jekyll-include-cache
   - jekyll-mathjax
   - jekyll-remote-theme
 
-# Use classic dated permalinks so old expectations still work
+# --- Permalinks ---
 permalink: /:categories/:year/:month/:day/:title/
 
+# --- Layout defaults ---
 defaults:
+  # Static pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false   # removes sidebar; keeps page centered
+  # Blog posts
   - scope:
       path: ""
       type: posts
     values:
       layout: single
-      classes: wide
-      author_profile: true
+      classes: wide           # wider centered post body
+      author_profile: false   # removes left sidebar for posts
       read_time: true
       comments: true
       share: true
       related: true
 
+# --- Header navigation ---
 header:
   nav:
     enabled: true
 
-# You do NOT need to include _posts; Jekyll always processes it
+# --- Includes ---
 include:
   - _pages
+  # You do NOT need to include _posts; Jekyll processes it automatically
