--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # --- Site ---
-title: The LinuxWire Blog
+title: LinuxWire Blog
 email: furtechtime@gmail.com
 description: >-
-  I am a sleepy, queer, undergraduate mathematics student. I love algorithms, theoretical computer science, pure math, and any research at all that involves the three. I hope to share what I learn as a student as well as explore some interesting mathematical concepts in this blog. My love for all of this started when I first started using Linux 5 years ago...
+  I am a 20 year student majoring in interdisciplinary mathematical sciences and minoring in data sciences. 
 url: "https://linuxwire.net"
 baseurl: ""
 github_username: linuxwire-blog
