--- a/_config.yml
+++ b/_config.yml
@@ -8,56 +8,41 @@ baseurl: ""
 github_username: linuxwire-blog
 timezone: America/New_York
 future: true
-
-markdown: kramdown
-kramdown:
-  input: GFM
-  math_engine: mathjax
-  math_engine_opts: {}
-math: true
-
 # --- Theme ---
 theme: jekyll-theme-clean-blog
-minimal_mistakes_skin: "dark"
+# remove: minimal_mistakes_skin
 
 # --- Plugins (GitHub Pages compatible) ---
 plugins:
   - jekyll-feed
   - jekyll-include-cache
-  - jekyll-mathjax
-  - jekyll-remote-theme
+  # You don't need jekyll-mathjax if you're adding the CDN script via _includes/scripts.html
+  # - jekyll-mathjax
+  # jekyll-remote-theme is only needed when you use `remote_theme: ...`
+  # - jekyll-remote-theme
 
-# --- Permalinks ---
-permalink: /:categories/:year/:month/:day/:title/
+# Optional: a site-wide fallback hero image
+hero_image: /assets/images/qcbackground.jpg
 
 # --- Layout defaults ---
 defaults:
-  # Static pages
-  - scope:
-      path: ""
-      type: pages
-    values:
-      layout: single
-      author_profile: false   # removes sidebar; keeps page centered
-  # Blog posts
+  # All posts
   - scope:
       path: ""
       type: posts
     values:
-      layout: single
-      classes: wide           # wider centered post body
-      author_profile: false   # removes left sidebar for posts
-      read_time: true
-      comments: true
-      share: true
-      related: true
+      layout: post              # Clean Blog's post layout
+      header-img: "{{ site.hero_image }}"  # default hero background
+      # image: "{{ site.hero_image }}"     # some forks use `image` — we set both below
 
-# --- Header navigation ---
-header:
-  nav:
-    enabled: true
+  # All pages (about, contact, etc.)
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: page              # Clean Blog's page layout
+      header-img: "{{ site.hero_image }}"
 
-# --- Includes ---
-include:
-  - _pages
-  # You do NOT need to include _posts; Jekyll processes it automatically
+# --- Permalinks ---
+permalink: /:categories/:year/:month/:day/:title/
+
