--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # --- Site ---
 title: LinuxWire Blog
-email: furtechtime@gmail.com
+email: staffordacademia@pm.me
 description: >-
   I am a 20 year student majoring in interdisciplinary mathematical sciences and minoring in data sciences. 
 url: "https://linuxwire.net"
